; ModuleID = '/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_psp.c_setup_callback.c'
source_filename = "/home/carl/AnghaBench/RetroArch/frontend/drivers/extr_platform_psp.c_setup_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"update_thread\00", align 1
@callback_thread = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @setup_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_callback() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @callback_thread, align 4
  %3 = call i32 @sceKernelCreateThread(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %2, i32 17, i32 4000, i32 0, i32 0)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = icmp sge i32 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %0
  %7 = load i32, i32* %1, align 4
  %8 = call i32 @sceKernelStartThread(i32 %7, i32 0, i32 0)
  br label %9

9:                                                ; preds = %6, %0
  %10 = load i32, i32* %1, align 4
  ret i32 %10
}

declare dso_local i32 @sceKernelCreateThread(i8*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @sceKernelStartThread(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
